--- a/public/src/app/proyectos/templates/proyectos-lista.component.html
+++ b/public/src/app/proyectos/templates/proyectos-lista.component.html
@@ -5,7 +5,7 @@
     <div class="panel-body">
         <div class="row">
             <div class="col-md-6">
-                <button type="button" class="btn btn-primary" (click)="onNuevoProyecto()"><i class="glyphicon glyphicon-plus"></i> Añadir proyecto</button>
+                <button type="button" class="btn btn-primary" (click)="onNuevoProyecto()" *ngIf="!mostrarCancelados"><i class="glyphicon glyphicon-plus"></i> Añadir proyecto</button>
             </div>
             <div class="col-md-6">
                 <button type="button" class="btn btn-default pull-right" (click)="toggleMostrarCancelados()" *ngIf="!mostrarCancelados">Mostrar cancelados</button>
@@ -24,7 +24,7 @@
                     <div class="col-md-12">
                         <button *ngIf="!mostrarCancelados" type="button" class="btn btn-default btn-sm" (click)="onModificar(proyecto)" data-toggle="modal" data-target="#mdlCancelar"><i class="glyphicon glyphicon-trash"></i></button>
                         <button *ngIf="mostrarCancelados" type="button" class="btn btn-default btn-sm" (click)="onModificar(proyecto)" data-toggle="modal" data-target="#mdlRestaurar"><i class="glyphicon glyphicon-repeat"></i></button>
-                        <button *ngIf="!mostrarCancelados" type="button" class="btn btn-default btn-sm" routerLink="{{proyecto._id}}"><i class="glyphicon glyphicon-cog"></i></button>
+                        <button *ngIf="!mostrarCancelados" type="button" class="btn btn-default btn-sm" routerLink="{{proyecto._id}}"><i class="glyphicon glyphicon-edit"></i></button>
                     </div>
                 </div>
             </div>
