--- a/public/src/app/proyectos/templates/proyectos-lista.component.html
+++ b/public/src/app/proyectos/templates/proyectos-lista.component.html
@@ -4,12 +4,12 @@
     </div>
     <div class="panel-body">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-12">
+              <div class="btn-group" role="group">
                 <button type="button" class="btn btn-primary" (click)="onNuevoProyecto()" *ngIf="!mostrarCancelados"><i class="glyphicon glyphicon-plus"></i> Añadir proyecto</button>
-            </div>
-            <div class="col-md-6">
                 <button type="button" class="btn btn-default pull-right" (click)="toggleMostrarCancelados()" *ngIf="!mostrarCancelados">Mostrar cancelados</button>
                 <button type="button" class="btn btn-default pull-right" (click)="toggleMostrarCancelados()" *ngIf="mostrarCancelados">Ocultar cancelados</button>
+              </div>
             </div>
         </div>
         <div class="list-group" *ngIf="proyectos != undefined && proyectos.length > 0">
