Trabajos para preparar las vistas de detalle de personajes y escenarios + terminada la de personajes + extraer el gestor de subidas de la escenas a un nuevo componente

--- a/public/src/app/biblia/templates/personaje-detalle.component.html
+++ b/public/src/app/biblia/templates/personaje-detalle.component.html
@@ -1,50 +1,61 @@
 ﻿<confirmacion-guardado [oConfirm]="confirmacionGuardado"></confirmacion-guardado>
-<div class="panel panel-primary" *ngIf="personaje != undefined">
-  <div class="panel-heading">
-    Detalle de personaje: {{personaje.nombre}}
+<div class="well" *ngIf="personaje != undefined">
+  <div class="panel panel-primary">
+    <div class="panel-heading">
+      Detalle de personaje: {{personaje.nombre}}
+    </div>
+    <div class="panel-body">
+      <table class="table table-responsive">
+        <tr>
+          <td>
+            <label for="nombre">Nombre</label>
+            <input type="text" class="form-control" id="nombre" [(ngModel)]="personaje.nombre" />
+          </td>
+          <td>
+            <label for="edad">Edad</label>
+            <input type="number" class="form-control" id="edad" [(ngModel)]="personaje.edad" />
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2">
+            <label for="procedencia">Procedencia</label>
+            <input type="text" class="form-control" id="procedencia" [(ngModel)]="personaje.procedencia" />
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2">
+            <label for="biografia">Biografía</label>
+            <ng2-summernote id="biografia" [(ngModel)]="personaje.biografia"></ng2-summernote>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2">
+            <label for="descripcionFisica">Descripción física</label>
+            <ng2-summernote id="descripcionFisica" [(ngModel)]="personaje.descripcionFisica"></ng2-summernote>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2">
+            <label for="descripcionPsicologica">Descripción psicológica</label>
+            <ng2-summernote id="descripcionPsicologica" [(ngModel)]="personaje.descripcionPsicologica"></ng2-summernote>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2">
+            <label for="imagen">Imagen del personaje</label>
+            <gestor-subida id="imagen" [fichero]="fichero"></gestor-subida>
+          </td>
+        </tr>
+      </table>
+    </div>
   </div>
-  <div class="panel-body">
-    <table class="table table-responsive">
-      <tr>
-        <td>
-          <label for="nombre">Nombre</label>
-          <input type="text" class="form-control" id="nombre" [(ngModel)]="personaje.nombre" />
-        </td>
-        <td>
-          <label for="edad">Edad</label>
-          <input type="number" class="form-control" id="edad" [(ngModel)]="personaje.edad" />
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2">
-          <label for="procedencia">Procedencia</label>
-          <input type="text" class="form-control" id="procedencia" [(ngModel)]="personaje.procedencia" />
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2">
-          <label for="biografia">Biografía</label>
-          <input type="text" class="form-control" id="biografia" [(ngModel)]="personaje.biografia" />
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2">
-          <label for="descripcionFisica">Descripción física</label>
-          <input type="text" class="form-control" id="descripcionFisica" [(ngModel)]="personaje.descripcionFisica" />
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2">
-          <label for="descripcionLogica">Descripción lógica</label>
-          <input type="text" class="form-control" id="descripcionLogica" [(ngModel)]="personaje.descripcionLogica" />
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2">
-          _ Subida de imagen _
-        </td>
-      </tr>
-    </table>
-    <botones-guardado [oBotonesGuardado]="botonesGuardado" (onAccionGuardado)="onAccionGuardado($event)"></botones-guardado>
+  <div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4 text-center">
+      <botones-guardado [oBotonesGuardado]="botonesGuardado" (onAccionGuardado)="onAccionGuardado($event)"></botones-guardado>
+    </div>
+    <div class="col-md-4"></div>
   </div>
 </div>
+<div class="alert alert-warning" *ngIf="personaje == undefined"><i class="glyphicon glyphicon-warning-sign"></i> No se ha encontrado el registro que se intentaba cargar.</div>
+
