--- a/public/src/assets/styles.css
+++ b/public/src/assets/styles.css
@@ -1,34 +1,44 @@
 ﻿body {
-    padding-top: 70px;
+  padding-top: 70px;
 }
+
 .mg-btm {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
+
 .table-borderless tbody tr td,
 .table-borderless tbody tr th,
 .table-borderless thead tr th,
 .table-borderless thead tr td,
 .table-borderless tfoot tr th,
-.table-borderless tfoot tr td
-{
-    border: none;
+.table-borderless tfoot tr td {
+  border: none;
 }
+
 .fixedTop {
-    position:fixed;
-    top:50px;
-    left: 0;
-    z-index:9998;
-    width: 100%;
-    max-height: 50%;
-    overflow: auto;
-    text-align: center;
+  position: fixed;
+  top: 50px;
+  left: 0;
+  z-index: 9998;
+  width: 100%;
+  max-height: 50%;
+  overflow: auto;
+  text-align: center;
 }
+
 .pdn-1 {
-    padding: 1em;
+  padding: 1em;
 }
+
 .pdn-btm-1 {
-    padding-bottom: 1em;
+  padding-bottom: 1em;
 }
+
 .mgn-top-1 {
-    margin-top: 1em;
+  margin-top: 1em;
+}
+
+.imagenSubida {
+  width: auto;
+  max-height: 20em;
 }
