--- a/public/src/app/escenas/templates/escena-detalle.component.html
+++ b/public/src/app/escenas/templates/escena-detalle.component.html
@@ -24,7 +24,7 @@
             <div class="row">
               <div class="col-md-2"></div>
               <div class="col-md-10">
-                <input data-toggle="toggle" [(ngModel)]="activarSugerencias" (change)="toggleSugerencias()" type="checkbox" id="sugerencias" /> <label for="sugerencias">Mostrar sugerencias</label>
+                <input [(ngModel)]="activarSugerencias" (change)="toggleSugerencias()" type="checkbox" id="sugerencias" /> <label for="sugerencias">Mostrar sugerencias</label>
               </div>
             </div>
         </div>
