--- a/public/src/app/templates/app.component.html
+++ b/public/src/app/templates/app.component.html
@@ -10,11 +10,14 @@
         </div>
         <div class="collapse navbar-collapse" id="menuGuionMaker">
             <ul class="nav navbar-nav">
-                <li role="presentation"><a href="" routerLink="">Inicio</a></li>
-                <li role="presentation" routerLinkActive="active"><a routerLink="/proyectos">Proyectos</a></li>
-                <li role="presentation" routerLinkActive="active" *ngIf="localStorageService.propiedades['proyectoActual'] != null"><a routerLink="/escenas">Escenas</a></li>
-                <li role="presentation" routerLinkActive="active" *ngIf="localStorageService.propiedades['proyectoActual'] != null"><a routerLink="/biblia">Biblia literaria</a></li>
-                <li role="presentation"><p class="navbar-text" *ngIf="localStorageService.propiedades['nombreProyectoActual'] != null"><i>Trabajando sobre <b>{{localStorageService.propiedades['nombreProyectoActual']}}</b></i></p></li>
+                <li role="presentation" *ngIf="hayUsuario()"><a href="" routerLink="">Inicio</a></li>
+                <li role="presentation" routerLinkActive="active" *ngIf="!hayUsuario()"><a routerLink="/login">Inicia sesión</a></li>
+                <li role="presentation" routerLinkActive="active" *ngIf="!hayUsuario()"><a routerLink="/registro">Regístrate</a></li>
+                <li role="presentation" routerLinkActive="active" *ngIf="hayUsuario()"><a routerLink="/proyectos">Proyectos</a></li>
+                <li role="presentation" routerLinkActive="active" *ngIf="hayProyecto()"><a routerLink="/escenas">Escenas</a></li>
+                <li role="presentation" routerLinkActive="active" *ngIf="hayProyecto()"><a routerLink="/biblia">Biblia literaria</a></li>
+                <li role="presentation"><p class="navbar-text" *ngIf="hayProyecto()"><i>Trabajando sobre <b>{{localStorageService.propiedades['nombreProyectoActual']}}</b></i></p></li>
+                <li role="presentation" *ngIf="hayUsuario()"><a role="button" (click)="cerrarSesion()">Cerrar sesión</a></li>
             </ul>
         </div>
     </div>
