Se añade el registro de usuario y validadores tanto para login como para registro + comprobación de cambios en las vista de detalle de la aplicación para mostrar diálogo de confirmación.

--- a/public/src/app/biblia/templates/escenario-detalle.component.html
+++ b/public/src/app/biblia/templates/escenario-detalle.component.html
@@ -15,13 +15,13 @@
         <tr>
           <td>
             <label for="ubicacion">Ubicación</label>
-            <ng2-summernote id="ubicacion" [(ngModel)]="elemento.ubicacion"></ng2-summernote>
+            <ng2-summernote id="ubicacion" [(ngModel)]="elemento.ubicacion" [config]="ng2config"></ng2-summernote>
           </td>
         </tr>
         <tr>
           <td>
             <label for="descripcion">Descripción</label>
-            <ng2-summernote id="descripcion" [(ngModel)]="elemento.descripcion"></ng2-summernote>
+            <ng2-summernote id="descripcion" [(ngModel)]="elemento.descripcion" [config]="ng2config"></ng2-summernote>
           </td>
         </tr>
         <tr>
