--- a/public/src/app/biblia/templates/personaje-detalle.component.html
+++ b/public/src/app/biblia/templates/personaje-detalle.component.html
@@ -25,19 +25,19 @@
         <tr>
           <td colspan="2">
             <label for="biografia">Biografía</label>
-            <ng2-summernote id="biografia" [(ngModel)]="elemento.biografia"></ng2-summernote>
+            <ng2-summernote id="biografia" [(ngModel)]="elemento.biografia" [config]="ng2config"></ng2-summernote>
           </td>
         </tr>
         <tr>
           <td colspan="2">
             <label for="descripcionFisica">Descripción física</label>
-            <ng2-summernote id="descripcionFisica" [(ngModel)]="elemento.descripcionFisica"></ng2-summernote>
+            <ng2-summernote id="descripcionFisica" [(ngModel)]="elemento.descripcionFisica" [config]="ng2config"></ng2-summernote>
           </td>
         </tr>
         <tr>
           <td colspan="2">
             <label for="descripcionPsicologica">Descripción psicológica</label>
-            <ng2-summernote id="descripcionPsicologica" [(ngModel)]="elemento.descripcionPsicologica"></ng2-summernote>
+            <ng2-summernote id="descripcionPsicologica" [(ngModel)]="elemento.descripcionPsicologica" [config]="ng2config"></ng2-summernote>
           </td>
         </tr>
         <tr>
