--- a/public/src/app/proyectos/templates/proyecto-detalle.component.html
+++ b/public/src/app/proyectos/templates/proyecto-detalle.component.html
@@ -41,7 +41,7 @@
       <div class="row mgn-top-1">
         <div class="col-md-12">
           <label for="sinopsis">Sinopsis</label>
-          <ng2-summernote lang="es-ES" [(ngModel)]="proyecto.sinopsis" id="sinopsis"></ng2-summernote>
+          <ng2-summernote lang="es-ES" [(ngModel)]="proyecto.sinopsis" id="sinopsis" [config]="ng2config"></ng2-summernote>
         </div>
       </div>
     </div>
