--- a/public/src/assets/styles.css
+++ b/public/src/assets/styles.css
@@ -73,3 +73,11 @@
 .note-editor {
   font-family: 'Courier New', 'sans-serif';
 }
+
+form input.ng-invalid, form input.ng-pristine.ng-invalid:focus {
+  border: 1px solid red;
+}
+
+form input.ng-pristine {
+  border: 1px solid dimgrey;
+}
